--- a/Trello_quora/quora-api/pom.xml
+++ b/Trello_quora/quora-api/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>jakarta.xml.bind-api</artifactId>
             <version>2.3.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.upgrad.quora</groupId>
+            <artifactId>quora-db</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
