--- a/Trello_quora/quora-service/pom.xml
+++ b/Trello_quora/quora-service/pom.xml
@@ -27,6 +27,11 @@
             <version>3.4</version>
         </dependency>
         <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.23.1-GA</version>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.1.7</version>
